@@ -4,6 +4,7 @@
   o describe more tests to help pinpoint regressions
   o fix test with rpm < 4.13 on CentOS7
   o perform some file conflict tests only on Mageia
+  o try harder to find genhdlist2 in uninstalled CPAN modules
 
 Version 8.121 - 8 April 2020
 
